--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://ilhamije.id/'
+baseURL = 'https://ilhamije.github.io'
 languageCode = 'en-us'
 title = 'ilhamije'
 theme = "PaperMod"
